--- a/public/css/blocks-dashboard.css
+++ b/public/css/blocks-dashboard.css
@@ -21,7 +21,6 @@ ul {
   flex-grow: 1;
 }
 
-.block-preview p,
 .block-preview h2,
 .block-preview ul,
 .block-preview ol,
